--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tech-interview-002",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,12 +11,17 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "next": "13.4.10",
-    "postcss": "8.4.26",
+    "next": "^14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "postcss": "8.4.26",
+    "autoprefixer": "10.4.14"
+  },
+  "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
+    "@typescript-eslint/eslint-plugin": "^5.62.0"
   }
 }
