--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "next": "^14.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "postcss": "8.4.26",
-    "autoprefixer": "10.4.14"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
-    "@typescript-eslint/eslint-plugin": "^5.62.0"
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
   }
 }
